# Maze-Generator

./: README.md
.project/: flow.drawio  front-end.code-workspace
generator/: Cargo.toml
generator/src/: generator.rs  lib.rs  node.rs
generator/src/generator/: draw.rs  logic.rs  maze.rs  tools.rs
generator/src/generator/draw/: circle.rs  rectangle.rs
generator/src/generator/grid/: square.rs
generator/src/generator/template/: circle.rs  macros.rs  rectangle.rs
generator/temp/: test.html  test.rs
web/: package-lock.json  package.json  tsconfig.json  webpack.config.js
web/public/: index.html
web/public/css/: style.css
web/public/js/: main.js
web/src/: index.ts
