[package]
name = "generator"
version = "0.1.0"
authors = ["Ludwig Granstedt <71264282+ludegra@users.noreply.github.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "test"

[dependencies]
getrandom = { version = "0.2.6", features = ["js"] }
rand = "0.8.5"
wasm-bindgen = "0.2.74"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
